--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
+    <meta name="google-adsense-account" content="ca-pub-2731457759470492">
   </head>
 
   <body>
