--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://speedtest-pro.app/" />
     <meta property="og:site_name" content="SpeedTest Pro" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SpeedTest Pro — Free Internet Speed Test" />
     <meta name="twitter:description" content="Test your internet speed, check IP, ISP, and network quality. Privacy-first, no sign-up." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="google-adsense-account" content="ca-pub-2731457759470492">
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
   </head>
 
   <body>
